--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
+import org.gradle.api.tasks.compile.JavaCompile
+
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
@@ -28,14 +31,18 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("koko.Koko")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "koko"
     archiveClassifier = null
 }
 
 run{
     standardInput = System.in
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
