--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.api.tasks.compile.JavaCompile
-
 plugins {
     id 'java'
     id 'application'
@@ -43,6 +41,6 @@ run{
     standardInput = System.in
 }
 
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
+checkstyle {
+    toolVersion = '11.0.0'
 }
